--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,25 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* SOLUTION */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.right-header, .left-header {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  gap: 15px;
+  padding: 0;
+  margin: 0;
+}
