--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,37 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* solutionzz */
+
+.modal {
+  display: flex;
+  padding: 15px;
+}
+
+/* they used flex-shrink: 0; instead of min-width */
+.icon {
+min-width: 42px;
+margin: 0 15px 15px 0;
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.text {
+  margin-bottom: 15px;
+}
